--- a/src/components/Deals/Deals.scss
+++ b/src/components/Deals/Deals.scss
@@ -1,6 +1,5 @@
 .deals {
   width: 100%;
-  min-height: 200px;
   gap: 30px;
   color: #fff;
   font-family: "Core Sans C", sans-serif;
@@ -10,6 +9,9 @@
     width: 50%;
     border-radius: 12px;
     padding: 50px 40px;
+    object-fit: cover !important;
+    object-position: center !important;
+    overflow: hidden;
     h1,
     h2,
     h3,
@@ -19,5 +21,59 @@
     p {
       color: #fff;
     }
+
+    button {
+      margin-top: 10px;
+      font-weight: 300;
+      font-size: 20px;
+      letter-spacing: 1.5px;
+    }
+
+    .deal-heading {
+      > h1 {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .deals-content {
+      padding: 30px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .deals-content {
+      padding: 30px;
+
+      .deal-heading {
+        > h1 {
+          margin: 0;
+          display: block;
+          line-height: 50px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    .deals-content {
+      width: 100%;
+      height: 300px;
+      padding: 30px;
+
+      .deal-heading {
+        > h1 {
+          margin: 0;
+          display: block;
+          line-height: 50px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    display: none !important;
   }
 }
