--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -36,6 +36,7 @@
         h1 {
           align-self: flex-start;
           margin-bottom: 10px;
+          font-size: xx-large;
         }
         p {
           align-self: flex-start;
@@ -59,6 +60,24 @@
 
       .signup-form {
         width: 100%;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
+    flex-direction: column;
+
+    .signup-left {
+      display: none;
+    }
+
+    .signup-right {
+      width: 100%;
+      height: 100%;
+      padding: 20px 20px;
+
+      .signup-main {
+        gap: 20px;
       }
     }
   }
