--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ html,
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -128,4 +134,9 @@ html,
 
 .bouncing-button {
   animation: bounce 0.4s linear;
+}
+
+.ant-layout-sider {
+  background-color: #fff;
+  color: #fff;
 }
