--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,9 @@
   align-items: center;
   justify-content: space-between;
   font-family: "Causten", sans-serif;
+  background-color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px 40px;
 }
 
 .logo {
@@ -21,25 +24,25 @@
 .search {
   width: 25%;
   display: flex;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  overflow: hidden;
 
   input {
     flex: 1;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
   }
 
   button {
-    width: 267px;
-    padding: 12px 20px !important;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    gap: 12px;
-    color: #807d7e;
-    text-align: center;
-    font-family: "Causten", sans-serif;
+    width: 100px;
+    padding: 10px;
+    background-color: #8a33fd;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
   }
 }
 
